# ms-migrate

./: README.md  pyproject.toml
ms_migrate_cli/: ms_device.py
